# os_exercises

./: CMakeLists.txt  README.md  array.c  array_race.c  cc  counter.c  increment_race.c  increment_race_wfs.c  main.c  mutxx.c  pipe.c  process.c  sections.c  shmem1.c  shmem2.c  tagme.c
test/: aplusb  aplusb.c  aplusbtest.c  test
