cmake_minimum_required(VERSION 3.6)
project(os_exercises C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -g")

include_directories(/usr/include/)
link_directories(/usr/include/)
include_directories(test)
find_package(Threads)

set(SOURCE_FILES
        #        test/aplusb.c)
        #        test/aplusb.h)
        #        test/aplusbtest.c)
        #        array.c)
        #        array_race.c)
                increment_race.c)
#                increment_race_wfs.c)
        #        mutxx.c)
#        counter.c)
#        main.c)
#        pipe.c)
#        process.c)
#        sections.c)
#        shmem1.c)
#        shmem2.c)
#        tagme.c)
add_executable(os_exercises ${SOURCE_FILES})
target_link_libraries(os_exercises pthread)